# Backup-Tool

./: .coveragerc  .gitignore  CHANGELOG.md  README.md  SCOPE.yaml  backup_tool_docs.md  backup_tool_post_fix_analysis.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
Schema/: README.md  file-entry.schema.json  manifest.schema.json  repo-metadata.schema.json  schema-index.json  snapshot-summary.schema.json
backup_tool/: __init__.py  __main__.py  atomic.py  chunking.py  cli.py  diff.py  errors.py  gc.py  hashing.py  lock.py  manifest.py  metadata.py  object_store.py  paths.py  repo_metadata.py  repository.py  snapshot_engine.py  staging.py  tmp_hygiene.py  verify.py
docs/: CASE_STUDY.md  IDS.md  LESSONS_LEARNED.md  README.md  RELEASE.md  RUNBOOK.md  TDD.md
docs/adr/: 0001-content-addressable-storage.md  0002-pure-content-hash-change-detection.md  0003-whole-file-dedup.md  0004-manifest-as-shallow-merkle-structure.md  0005-hashing-not-encryption.md  0006-never-destructive-by-default.md  0007-repository-locking.md  0010-module-layout.md  (+5 more)
tests/: conftest.py  schema_validation.py  test_atomic.py  test_chunking.py  test_cli.py  test_compat.py  test_diff.py  test_edge_cases.py  test_errors.py  test_gaps.py  test_gc_hygiene.py  test_happy_paths.py  test_hashing.py  test_lock.py  test_main_module.py  test_manifest.py  test_manifest_schema.py  test_object_store.py  test_package.py  test_paths.py  test_regression_gaps.py  test_repo_json_schema.py  test_repo_metadata.py  test_repository.py  test_safety_fixes.py  test_snapshot_engine.py  test_snapshot_engine_extra.py  test_staging.py  test_static_checks.py  test_validation_hygiene.py
(+1 files in other folders)
