[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "backup-tool"
version = "0.1.0"
description = "A local content-addressable backup tool with immutable JSON snapshots."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Princeton Afeez" }]
dependencies = []

[project.scripts]
backup-tool = "backup_tool.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backup_tool*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.coverage.run]
source = ["backup_tool"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 85

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
packages = ["backup_tool"]
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_return_any = false

[[tool.mypy.overrides]]
module = ["backup_tool.manifest"]
strict = true
follow_imports = "skip"

